<resources>
    <string name="app_name">Beelo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="invalid_pass">The password is invalid, please check your password</string>
    <string name="email_alert_1">Please Enter Email Address</string>
    <string name="email_alert_2">Please Enter a Valid Email Address</string>
    <string name="pass_alert">Please Enter Password</string>
    <string name="name_alert">Please Enter Your Name</string>
    <string name="username_alert">Please Enter Your UserName</string>
    <string name="phone_alert">Please Enter Your Phone Number</string>
    <string name="city_alert">Please Enter Your City</string>
    <string name="address_alert">Please Enter Your Address</string>
    <string name="gender_alert">Please Select Your Gender</string>
    <string name="hi">Hi,</string>
    <string name="the_most_popular">The most Popular</string>
    <string name="no_notification">No notification</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="splash_text_header">Special Jacket Collections!</string>
    <string name="shop_name">Beelo</string>
    <string name="settings">Settings</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="size">Size</string>
    <string name="xl">XL</string>
    <string name="sueded_bomber_jacket">Sueded Bomber Jacket</string>
    <string name="color">Color</string>
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="save_btn">save</string>
    <string name="sign_in_btn_txt">sign in</string>
    <string name="register_btn_txt">Register</string>
    <string name="name_hint">Name</string>
    <string name="username_hint">Username</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="city_hint">City</string>
    <string name="address_hint">Address</string>
    <string name="select_your_gender">Select Your Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
</resources>