<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.register.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.activity.register.RegisterActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawablePadding="5dp"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHighlight="#EEEEEE"
            android:textColorLink="#0E0E0E" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawablePadding="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawablePadding="5dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawablePadding="5dp"
            android:hint="@string/username_hint"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawablePadding="5dp"
            android:hint="@string/phone_number_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawablePadding="5dp"
            android:hint="@string/city_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputaddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:drawablePadding="5dp"
            android:hint="@string/address_hint"
            android:inputType="text"
            android:maxLines="1"
            android:padding="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColorHighlight="@color/white"
            android:textColorLink="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/gender_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/select_your_gender"
            android:layout_marginStart="8dp"/>

        <RadioGroup
            android:layout_gravity="start"
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="20dp">




        <RadioButton
            android:id="@+id/radio_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radio_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/female" />
        </RadioGroup>


        <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:backgroundTint="@color/orange"
        android:text="@string/save_btn" />


</LinearLayout>

</ScrollView>